MDEV-39284 LPAD/RPAD corrupts cached string buffer

When LPAD or RPAD is called with a constant first argument in a
SELECT expression e.x. LPAD(LTRIM('v0px'), id), the constant item
e.x. LTRIM('v0px') is cached for reuse across rows. In the
val_str implementations of LPAD/RPAD, certain code mutated the cache
in place. So, all subsequent row computations recieved a corrupted
cache leading to wrong results.

Since SELECT uses the const-item cache optimization but DELETE/UPDATE
doesn't, there was a difference in the number of rows returned despite
similar WHERE conditions.

Fixed it by copying cache contents to a non-cache buffer, mutating and
returning it.

Signed-off-by: Dearsh Oberoi <oberoidearsh@gmail.com>